--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "latest",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.30",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
@@ -23,6 +23,7 @@
     "zod": "^3.25.17"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^16.0.6",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
